# compose-demo

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ozcomcn/modellbox/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  conanfile.txt  native-lib.cpp
app/src/main/java/com/ozcomcn/modellbox/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/ozcomcn/modellbox/: ExampleUnitTest.kt
compose-beginner/: build.gradle
compose-beginner/src/androidTest/java/com/ozcomcn/compose_beginner/: ExampleInstrumentedTest.kt
compose-beginner/src/main/: AndroidManifest.xml
compose-beginner/src/main/cpp/: CMakeLists.txt  native-lib.cpp
compose-beginner/src/main/java/com/ozcomcn/compose_beginner/: App.kt  MainActivity.kt
compose-beginner/src/main/java/com/ozcomcn/compose_beginner/ai/: AiChatScreen.kt  AiScreen.kt
compose-beginner/src/main/java/com/ozcomcn/compose_beginner/animation/: AnimationScreen.kt
compose-beginner/src/main/java/com/ozcomcn/compose_beginner/base/: BaseActivity.kt
compose-beginner/src/main/java/com/ozcomcn/compose_beginner/components/: AppBarsScreen.kt  ButtonsScreen.kt  CardsScreen.kt  CarouselScreen.kt  CheckboxScreen.kt  ComponentsScreen.kt  TextFieldsScreen.kt
compose-beginner/src/main/java/com/ozcomcn/compose_beginner/data/: ApiUtils.kt  AppSettingKeys.kt  AppSettingRepository.kt  ChatRepository.kt  UserRepository.kt
compose-beginner/src/main/java/com/ozcomcn/compose_beginner/di/: version.kt
compose-beginner/src/main/java/com/ozcomcn/compose_beginner/graphics/: GraphicsScreen.kt
compose-beginner/src/main/java/com/ozcomcn/compose_beginner/initializer/: NetworkInitializer.kt  WorkManagerInitializer.kt
compose-beginner/src/main/res/values/: strings.xml  themes.xml
compose-beginner/src/main/res/xml/: network_security_config.xml
compose-beginner/src/test/java/com/ozcomcn/compose_beginner/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
llama/: build.gradle
llama/src/androidTest/java/com/ozcomcn/llama/: ExampleInstrumentedTest.kt
llama/src/main/cpp/: CMakeLists.txt
llamarun/: build.gradle
llamarun/src/androidTest/java/com/ozcomcn/llama/: ExampleInstrumentedTest.kt
llamarun/src/main/: AndroidManifest.xml
llamarun/src/test/java/com/ozcomcn/llama/: ExampleUnitTest.kt
(+93 files in other folders)
